Add refresh endpoint for jwt
